--- a/css/layout.css
+++ b/css/layout.css
@@ -2,9 +2,10 @@
   display: none !important;
 }
 
+/*
 .padding-0 {
   padding: 0 !important;
-}
+} */
 
 .container {
   max-width: 575px;
@@ -14,7 +15,6 @@
 
 .row {
   display: flex;
-  flex-wrap: wrap;
 }
 
 .column-sixty-percent {
@@ -40,11 +40,27 @@
     width: 50%;
   }
 
-  .column-eighty-two {
-    width: 82%;
-  }
-
   button {
     padding: 0.5rem;
+  }
+
+  .column-sixty-percent {
+    width: 60%;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .fa-chevron-right {
+    position: relative;
+    left: 2rem;
+  }
+
+  .fa-chevron-left {
+    position: relative;
+    right: 2rem;
+  }
+
+  .column-full {
+    width: 100%;
   }
 }
