--- a/css/styles.css
+++ b/css/styles.css
@@ -55,3 +55,22 @@ p {
   font-size: 400;
   font-family: 'Roboto', sans-serif;
 }
+
+/* .chevron-styling {
+  width: fit-content;
+  position: absolute;
+  height: 100vh;
+  align-items: center;
+} */
+
+.justify-content-align {
+  justify-content: space-around;
+  align-items: center;
+}
+
+.fa-chevron-right,
+.fa-chevron-left {
+  font-size: xx-large;
+  color: white;
+  cursor: pointer;
+}
