added smiling emoji underneath text

--- a/css/layout.css
+++ b/css/layout.css
@@ -48,4 +48,14 @@
   .column-full {
     width: 100%;
   }
+
+  .fa-chevron-right {
+    position: relative;
+    left: 2rem;
+  }
+
+  .fa-chevron-left {
+    position: relative;
+    right: 2rem;
+  }
 }
