--- a/css/styles.css
+++ b/css/styles.css
@@ -60,3 +60,34 @@ p {
   justify-content: space-around;
   align-items: center;
 }
+
+.fa-chevron-right,
+.fa-chevron-left {
+  font-size: xx-large;
+  color: white;
+  cursor: pointer;
+}
+
+.favorite-emoji {
+  background-color: transparent;
+  border: none;
+  font-size: 4rem;
+  cursor: pointer;
+  user-select: none;
+  transform: scale(1);
+  transition: 0.5s;
+}
+
+.favorite-emoji:hover {
+  transform: scale(1.1);
+}
+
+.favorite-emoji-position {
+  position: absolute;
+  bottom: 0;
+}
+
+.laughing-emoji-position {
+  position: absolute;
+  right: 0.8rem;
+}
