--- a/css/styles.css
+++ b/css/styles.css
@@ -61,8 +61,8 @@ p {
   align-items: center;
 }
 
-.fa-chevron-right,
-.fa-chevron-left {
+.arrow-left,
+.arrow-right {
   font-size: xx-large;
   color: white;
   cursor: pointer;
