--- a/css/styles.css
+++ b/css/styles.css
@@ -95,3 +95,23 @@ p {
 .justify-content-center {
   justify-content: center;
 }
+
+.hamburger-menu {
+  font-size: 25px;
+  color: white;
+  border-radius: 5px;
+  border-style: solid;
+  text-align: center;
+  border-width: thin;
+  border-color: rgb(157, 153, 145);
+}
+
+.hamburger-menu > a {
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
+}
+
+.bars {
+  color: rgb(173, 170, 164);
+}
