--- a/css/styles.css
+++ b/css/styles.css
@@ -130,3 +130,50 @@ p {
   padding-left: 10px;
   font-family: 'roboto', sans-serif;
 }
+
+.favorite {
+  cursor: pointer;
+}
+
+.heart {
+  color: red;
+}
+
+.favorite-design {
+  color: #fff4e3;
+  font-family: 'Nunito', sans-serif;
+  font-weight: 300;
+  border-bottom: #eee solid 1px;
+  padding: 2rem 0 2rem 0;
+}
+
+.favorite-page {
+  margin: 0 auto;
+  padding: 0 1.5rem;
+}
+
+.favorite-joke-design {
+  list-style: none;
+  color: #fff4e3;
+  font-size: 24px;
+  font-weight: 300;
+  border-bottom: #eee solid 1px;
+  padding: 2rem 0 2rem 0;
+  margin: 0;
+}
+
+.padding-initial {
+  padding: initial;
+  margin: 0;
+}
+
+.font-family {
+  font-family: 'Nunito', sans-serif;
+}
+
+.no-joke {
+  color: #fff4e3;
+  font-family: 'Nunito', sans-serif;
+  font-weight: 300;
+  padding: 2rem 0 2rem 0;
+}
