completed some design

--- a/css/layout.css
+++ b/css/layout.css
@@ -67,6 +67,14 @@
   .bars {
     margin-top: 6px;
   }
+
+  .align-center {
+    align-items: center;
+  }
+
+  .row {
+    display: flex;
+  }
 }
 
 .align-center {
